# edlib_ws

./: README.md
edlib_ws/: newGrad.pgm
edlib_ws/devel/: .catkin  setup.sh
edlib_ws/devel/lib/edlib/: video_test1  video_test2  video_test3
edlib_ws/devel/lib/pkgconfig/: edlib.pc
edlib_ws/devel/share/edlib/cmake/: edlibConfig.cmake
edlib_ws/src/edlib/: CMakeLists.txt  package.xml
edlib_ws/src/edlib/launch/: test.launch
edlib_ws/src/edlib/src/: ED.cpp  EDCircles.cpp  test_ED.cpp  video_test1.cpp  video_test2.cpp  video_test3.cpp  video_test4.cpp  video_test5.cpp  video_test6.cpp
pythonProject/neural networks/: nn_test.py  nn_train.py  resnet18_test.py  resnet18_train.py
yolov5_findball/: package.xml
yolov5_findball/launch/: yolo_v5.launch  yolo_v52.launch
yolov5_findball/msg/: Silos.msg
yolov5_findball/scripts/: camera.py  camera1.py  camera2.py  decectball2.py  decectball22.py  decectdemo.py  save.py  yolo_v5.py
