<?xml version="1.0"?>
<package format="2">
  <name>yolov5_findball</name>
  <version>1.0.1</version>
  <description>The yolov5_findball package</description>

  <maintainer email="114514@163.com">yuyuyu</maintainer>

  <license>APLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>yolov5_ros_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>yolov5_ros_msgs</exec_depend>

  <export>

  </export>
</package>
